--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,5 +20,7 @@ jobs:
             - node_modules
       - 
         run: "npm run test -- --progress=false --watch=false --browsers=ChromeHeadless"
+      -
+        run: "npm run e2e -- --protractor-config=e2e/protractor-ci.conf.js"
     working_directory: ~/myapp/agenda-angular
 version: 2
