--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - 
         run: "npm install"
       - 
-        run: "npm run webdriver-manager update --standalone false --gecko false"
+        run: "webdriver-manager update --standalone false --gecko false"
       - 
         save_cache: 
           key: "agenda-angular-{{ .Branch }}-{{ checksum \"package-lock.json\" }}"
